<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/app_padding"
  tools:context=".MainActivity">

  <EditText
    android:id="@+id/et_name"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/text_name"
    android:inputType="textPersonName"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tv_label_gender"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/label_gender"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/et_name" />

  <RadioGroup
    android:id="@+id/group_gender"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_label_gender">

    <RadioButton
      android:id="@+id/rb_male"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:checked="true"
      android:text="@string/text_male" />

    <RadioButton
      android:id="@+id/rb_female"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/text_female" />
  </RadioGroup>

  <TextView
    android:id="@+id/tv_label_hobbies"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/label_hobbies"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/group_gender" />

  <CheckBox
    android:id="@+id/ch_reading"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/text_reading"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_label_hobbies" />

  <CheckBox
    android:id="@+id/ch_sport"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/text_sport"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/ch_reading" />

  <CheckBox
    android:id="@+id/ch_art"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/text_art"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/ch_sport" />

  <TextView
    android:id="@+id/tv_label_department"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/label_department"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/ch_art" />

  <Spinner
    android:id="@+id/spin_department"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:entries="@array/departments"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_label_department" />

  <Button
    android:id="@+id/button_date"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/action_date"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/spin_department" />
</androidx.constraintlayout.widget.ConstraintLayout>